--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>The calculator</h1>
     <div id="container">
-        <div id="display">12451</div>
+        <div id="display"></div>
 
         <div class="buttons">
             <div class="left">
